Fixed missing space between header and body

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,7 +4,7 @@
     border-width: thin;
     border-style: none;
     border-radius: 7pt;
-    background-color: #4e4e50;
+    background-color: hsl(240, 1%, 31%);
     padding: 5pt;
 }
 
@@ -101,6 +101,7 @@ label {
 
 .div-container-content {
     display: grid;
+    margin: 1% auto;
     grid-template-columns: 200px auto;
     grid-column-gap: 10px;
 }
@@ -218,7 +219,7 @@ label {
     grid-template-columns: 50% 50%;
     width: auto;
     height: auto;
-    margin: auto;
+    margin: 1% auto;
     padding: 1% 5% 1% 5%;
     border-width: thin;
     border-style: none;
@@ -342,7 +343,7 @@ input:checked+.slider:before {
     width: 15%;
     min-width: 350px;
     padding: 0.5% 1% 0.05% 1%;
-    margin: auto;
+    margin: 1% auto;
     border-radius: 10pt;
     background-color: #4e4e50;
     vertical-align: middle;
@@ -375,7 +376,7 @@ input:checked+.slider:before {
     width: 15%;
     min-width: 350px;
     padding: 0.5% 1% 0.05% 1%;
-    margin: auto;
+    margin: 1% auto;
     border-radius: 10pt;
     background-color: #4e4e50;
     vertical-align: middle;
